@@ -17,5 +17,5 @@
  */
 
 #ifndef	PATCHLEVEL
-#define PATCHLEVEL    "2.8/hybrid-6b52"
+#define PATCHLEVEL    "2.8/hybrid-6b53"
 #endif
